Ganti Background, penambahan tombolm Cv, WhatsApp & My Portfolio

--- a/index.html
+++ b/index.html
@@ -24,10 +24,29 @@
       <main>
         <img src="img/profil-even.png" alt="Even Akong" />
         <h2>Even Akong</h2>
-        <a href=""><i class="fa-brands fa-instagram"></i> Instagram</a>
-        <a href=""><i class="fa-brands fa-youtube"></i> Youtube</a>
-        <a href=""><i class="fa-brands fa-facebook"></i> Facebook</a>
-        <a href=""><i class="fa-brands fa-linkedin"></i> Linkedin</a>
+
+        <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
+        <a href="#"><i class="fa-brands fa-youtube"></i> Youtube</a>
+        <a href="#"><i class="fa-brands fa-facebook"></i> Facebook</a>
+        <a href="#"><i class="fa-brands fa-linkedin"></i> Linkedin</a>
+
+        <!-- Tombol Download CV -->
+        <a href="cv/cv.html" target="_blank">
+          <i class="fa-solid fa-file-lines"></i> View My CV
+        </a>
+
+        <!-- Tombol WhatsApp -->
+        <a href="https://wa.me/6285338610666" target="_blank" rel="noopener">
+          <i class="fa-brands fa-whatsapp"></i> Chat WhatsApp
+        </a>
+        <!-- Tombol Portofolio -->
+        <a
+          href="https://even-webportfolio.netlify.app/"
+          target="_blank"
+          rel="noopener"
+        >
+          <i class="fa-solid fa-globe"></i> My Portfolio
+        </a>
       </main>
       <footer>
         <p>made with 💖 by <a href="">Even Akong</a></p>
