penambahan btn portfolio & Github di Cv

--- a/cv/cv.html
+++ b/cv/cv.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="cv-style.css" />
   </head>
   <body>
+     <div id="particles-js"></div>
     <header>
       <img src="../img/profil-even.png" alt="Even Akong" />
       <h1>Even Akong</h1>
@@ -27,6 +28,18 @@
       <div class="contact-info">
         <span><i class="fa-regular fa-envelope"></i> efenpentus@gmail.com</span>
         <span><i class="fa-solid fa-phone"></i> +62 853-3861-0666</span>
+      </div>
+      <div class="button-group">
+        <a href="https://even-webportfolio.netlify.app/" target="_blank">
+          <button class="custom-btn">
+            <i class="fa-solid fa-address-card"></i> Portofolio
+          </button>
+        </a>
+        <a href="https://github.com/Evenakong" target="_blank">
+          <button class="custom-btn">
+            <i class="fa-solid fa-code-branch"></i> GitHub Saya
+          </button>
+        </a>
       </div>
     </header>
 
@@ -44,12 +57,15 @@
       <h2>Work Experience</h2>
       <ul>
         <li>
-          <strong>Junior Web Developer</strong> - PT. Teknologi Nusantara (2023 - Present)<br />
-          Develop and maintain company website and client projects using modern web technologies.
+          <strong>Junior Web Developer</strong> - PT. Teknologi Nusantara (2023
+          - Present)<br />
+          Develop and maintain company website and client projects using modern
+          web technologies.
         </li>
         <li>
           <strong>Intern Programmer</strong> - Startup Digital Kreatif (2022)<br />
-          Assisted in coding and debugging web applications, collaborated in Agile teams.
+          Assisted in coding and debugging web applications, collaborated in
+          Agile teams.
         </li>
       </ul>
     </section>
@@ -79,9 +95,21 @@
       <h2>Portfolio</h2>
       <ul>
         <li>
-          <a href="https://even-webportfolio.netlify.app/" target="_blank">https://evenakong.com</a>
+          <a href="https://even-webportfolio.netlify.app/" target="_blank"
+            >https://evenakong.com</a
+          >
         </li>
       </ul>
     </section>
+
+     <!-- Font Awesome CDN -->
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Particles.js CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="particles-config.js"></script>
   </body>
 </html>
