--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <img src="img/profil-even.png" alt="Even Akong" />
         <h2>Even Akong</h2>
 
-        <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
-        <a href="#"><i class="fa-brands fa-youtube"></i> Youtube</a>
-        <a href="#"><i class="fa-brands fa-facebook"></i> Facebook</a>
+        <a href="https://www.instagram.com/even_akong/" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
+        <a href="https://www.youtube.com/@evenakong1301" target="_blank"><i class="fa-brands fa-youtube"></i> Youtube</a>
+        <a href="https://web.facebook.com/aven.akong.1" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a>
         <a href="#"><i class="fa-brands fa-linkedin"></i> Linkedin</a>
 
         <!-- Tombol Download CV -->
