--- a/cv/cv.html
+++ b/cv/cv.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="cv-style.css" />
   </head>
   <body>
-     <div id="particles-js"></div>
+    <div id="particles-js"></div>
     <header>
       <img src="../img/profil-even.png" alt="Even Akong" />
       <h1>Even Akong</h1>
@@ -57,15 +57,14 @@
       <h2>Work Experience</h2>
       <ul>
         <li>
-          <strong>Junior Web Developer</strong> - PT. Teknologi Nusantara (2023
-          - Present)<br />
+          <strong>Junior Web Developer</strong> - Freelance (2023 - Present)<br />
           Develop and maintain company website and client projects using modern
           web technologies.
         </li>
         <li>
-          <strong>Intern Programmer</strong> - Startup Digital Kreatif (2022)<br />
-          Assisted in coding and debugging web applications, collaborated in
-          Agile teams.
+          <strong>Graphic Designer</strong> - Dey@art Digital Printing
+          (2022-2023 )<br />
+          Help design and operate printing presses
         </li>
       </ul>
     </section>
@@ -74,8 +73,10 @@
       <h2>Education</h2>
       <ul>
         <li>
-          Bachelor of Computer Science<br />
-          Universitas Indonesia (2019 - 2023)
+          Visual Communication Design<br />
+          St. Aloisius Vocational School (2020 - 2023)<br>
+          Informatics Engineering<br />
+          STT Malang (2023 - Present)
         </li>
       </ul>
     </section>
@@ -84,10 +85,8 @@
       <h2>Skills</h2>
       <ul>
         <li>HTML, CSS, JavaScript</li>
-        <li>React.js, Vue.js</li>
-        <li>Node.js, Express</li>
-        <li>MySQL, MongoDB</li>
         <li>Git & Version Control</li>
+        <li>Adobe Photosho, CorelDraw</li>
       </ul>
     </section>
 
@@ -102,7 +101,7 @@
       </ul>
     </section>
 
-     <!-- Font Awesome CDN -->
+    <!-- Font Awesome CDN -->
     <script
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
